fix and feat: scroll and social links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GDorker - Pesquise como um profissional</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">    
@@ -61,6 +62,26 @@
             <p class="muted" style="margin:10px 0">Pré-visualização da query (o que será enviado para o Google):</p>
             <div class="preview" id="preview"></div>
             <p class="muted" id="warning"></p>
+        </div>
+
+        <div class="social-section">
+            <div class="social-help">
+                <p class="help-text">💡 <strong>Quer ajudar?</strong> Contribua com o projeto ou conecte-se comigo!</p>
+            </div>
+            <div class="social-links">
+                <a href="https://github.com/eukevintt/gdorker" target="_blank" rel="noopener" class="social-link project">
+                    <i class="fa-brands fa-github fa-lg"></i>
+                    Projeto no GitHub
+                </a>
+                <a href="https://github.com/eukevintt" target="_blank" rel="noopener" class="social-link github">
+                    <i class="fa-brands fa-github fa-lg"></i>
+                    Meu GitHub
+                </a>
+                <a href="https://www.linkedin.com/in/kevin-araujo-3b19b314b" target="_blank" rel="noopener" class="social-link linkedin">
+                    <i class="fa-brands fa-linkedin-in fa-lg"></i>
+                    LinkedIn
+                </a>
+            </div>
         </div>
     </div>
     
